lkl: add lkl build support
update builrudmp for libos-nuse/buildrump.sh linux-libos branch.
update build.sh to build libos-nuse/lkl-linux
libos-nuse/musl for alternate libc
update qemu-arm code to support larger mem size (linux needs)
franken starc_main.c calls musl initialization

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/buildrump/tests/Makefile.inc
+++ b/buildrump/tests/Makefile.inc
@@ -3,3 +3,8 @@ NOMAN=	should be yesman
 
 LDADD+=		-Wl,--whole-archive ${RUMPLIBS} -Wl,--no-whole-archive
 CPPFLAGS+=	-I${.CURDIR}/../common
+
+# link sysproxy if it's a separate component (historic compat)
+RUMPTOP=${TOPRUMP}
+.include "${RUMPTOP}/kern/Makefile.rumpkerncomp"
+RUMPKERN_SYSPROXY= ${RUMPKERNCOMPS:Msysproxy:S/sysproxy/-lrumpkern_sysproxy/}
