--- a/buildrump/.travis.yml
+++ b/buildrump/.travis.yml
@@ -1,4 +1,12 @@
 language: c
+addons:
+  apt:
+    packages:
+      - bc
+      - libfuse-dev
+      - libarchive-dev
+      - xfsprogs
+      - btrfs-tools
 
 compiler:
   - gcc
@@ -8,6 +16,7 @@ sudo: false
 
 before_script:
   - ./buildrump.sh checkout
+  - ./buildrump.sh ${LINUX} checkout
 
 env:
   - NAME='static' LIBTYPE='MKPIC=no' BUILDTYPE='' TESTS='tests'
@@ -15,9 +24,11 @@ env:
   - NAME='debug' LIBTYPE='MKSTATICLIB=no' BUILDTYPE='-DDD' TESTS='tests'
   - NAME='release' LIBTYPE='MKSTATICLIB=no' BUILDTYPE='-r' TESTS='tests'
   - NAME='fibers' LIBTYPE='MKSTATICLIB=no' BUILDTYPE='-V RUMPUSER_THREADS=fiber -V RUMP_CURLWP=hypercall' TESTS=''
+  - NAME='dynamic' LIBTYPE='MKSTATICLIB=no' BUILDTYPE='' TESTS='tests' LINUX='-l ./lkl-linux'
+  - NAME='fibers' LIBTYPE='MKSTATICLIB=no' BUILDTYPE='-V RUMPUSER_THREADS=fiber -V RUMP_CURLWP=hypercall' TESTS='' LINUX='-l ./lkl-linux'
 
 script:
-  -  ./buildrump.sh -o obj.${NAME} -d rump.${NAME} -qq -j16 -V ${LIBTYPE} ${BUILDTYPE} fullbuild ${TESTS}
+  - ./buildrump.sh ${LINUX} -o obj.${NAME} -d rump.${NAME} -qq -j16 -V ${LIBTYPE} ${BUILDTYPE} fullbuild ${TESTS}
 
 notifications:
   irc:
