split rumpkernel specific stuff to rumpkernel/*/rumpkernel.sh
also add ping/ping6 from iputils (2010 version) for the temporal test
case. should be externaly manager something like pkg manager.

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -18,6 +18,10 @@ run:			$(OBJ)
 			RUMP_VERBOSE=1 ${REXEC} $(OBJDIR)/hello
 			${REXEC} $(OBJDIR)/ctor
 			echo frankenlibc | ${REXEC} $(OBJDIR)/cat
+ifneq ($(wildcard $(OBJDIR)/ping),)
+			${REXEC} ${OBJDIR}/ping # -c 3 127.0.0.1
+			${REXEC} ${OBJDIR}/ping6 # -c 3 ::1
+endif
 
 $(OBJDIR)/ctor:		ctor.c $(DEPS)
 			@mkdir -p $(OBJDIR)
@@ -34,3 +38,4 @@ $(OBJDIR)/cat:		cat.c $(DEPS)
 .PHONY:			test clean
 clean:		
 			rm -f $(OBJ)
+			${MAKE} clean -C iputils
