move virtio code from librumpuser to franken/virtio
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -17,13 +17,14 @@ default:		$(OBJ)
 run:			$(OBJ)
 			dd if=/dev/zero of=disk.img bs=1024 count=20480
 			mkfs.ext4 -F disk.img
-			RUMP_VERBOSE=1 ${REXEC} $(OBJDIR)/hello
-			${REXEC} $(OBJDIR)/ctor
-			echo frankenlibc | ${REXEC} $(OBJDIR)/cat
+			RUMP_VERBOSE=1 ${REXEC} $(OBJDIR)/hello disk.img
+			${REXEC} $(OBJDIR)/ctor disk.img
+			echo frankenlibc | ${REXEC} $(OBJDIR)/cat disk.img
 ifneq ($(wildcard $(OBJDIR)/ping),)
-			${REXEC} ${OBJDIR}/ping -- -c 3 127.0.0.1
-			${REXEC} ${OBJDIR}/ping6 -- -c 3 ::1
+			${REXEC} ${OBJDIR}/ping disk.img -- -c 3 127.0.0.1
+			${REXEC} ${OBJDIR}/ping6 disk.img -- -c 3 ::1
 endif
+			rm -f disk.img
 
 $(OBJDIR)/ctor:		ctor.c $(DEPS)
 			@mkdir -p $(OBJDIR)
