--- a/franken/Makefile
+++ b/franken/Makefile
@@ -1,4 +1,4 @@
-DIRS=libc lwp stubs thread init ucontext malloc
+DIRS=libc lwp stubs thread init ucontext malloc virtio
 RUMPOBJ?=../rumpobj
 RUMP?=$(RUMPOBJ)/rump
 LIBDIR=$(RUMP)/lib
