lkl: update virtio_net to establish outside of the world
updated franken/virtio from the latest lkl (copied, should be shared).
need more clean up for a bunch of XXX/FIXME but the following should
work.

% sudo ip ad add 10.1.0.1/24 dev tap0
% sudo ifconfig tap0 up
% ./rump/bin/rexec ./rumpobj/tests/ping tap:tap0  --  10.1.0.1

this also should work if you properly create disk.img which is mounted
to /etc (currently can't mount disk to / with lkl). will create more
reproducible script for this nginx support.

% rexec ./objs/nginx disk.img tap:tap0 -- -c /etc/data/conf/nginx.conf

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/franken/virtio/Makefile
+++ b/franken/virtio/Makefile
@@ -5,8 +5,14 @@ OBJDIR=$(RUMPOBJ)/franken
 OBJ=$(OBJDIR)/virtio.o
 OBJ+=$(OBJDIR)/virtio_blk.o
 OBJ+=$(OBJDIR)/fs.o
+OBJ+=$(OBJDIR)/virtio_net.o
 RUMP?=$(RUMPOBJ)/rump
 INCLUDES=-I../include -I../../platform/include -I. -I$(RUMP)/include -I../../librumpuser/
+INCLUDES+=-I../thread/ -I../ucontext/ -I../../platform/linux -I../init
+LKL_INCLUDES=-I../../lkl-linux/include/uapi -I../../lkl-linux/include
+LKL_INCLUDES+=-I../../lkl-linux/arch/lkl/include/ -I../../lkl-linux/arch/lkl/include/uapi
+LKL_INCLUDES+=-I../../lkl-linux/arch/lkl/include/generated -I../../lkl-linux/arch/lkl/include/generated/uapi
+INCLUDES+=$(LKL_INCLUDES)
 CPPFLAGS+=-nostdinc $(INCLUDES)
 CFLAGS+=-fno-stack-protector
 DEPS=
@@ -24,6 +30,10 @@ $(OBJDIR)/virtio_blk.o:		virtio_blk.c $(DEPS)
 $(OBJDIR)/fs.o:			fs.c $(DEPS)
 				@mkdir -p $(OBJDIR)
 				$(COMPILE.c) -o $@ fs.c
+
+$(OBJDIR)/virtio_net.o:		virtio_net.c $(DEPS)
+				@mkdir -p $(OBJDIR)
+				$(COMPILE.c) -o $@ virtio_net.c
 
 .PHONY:				clean
 clean:		
