lkl: use lkl as much as possible
use lkl_host_ops instead of rump hypercall directly, etc.

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/franken/Makefile
+++ b/franken/Makefile
@@ -1,4 +1,4 @@
-DIRS=libc lwp stubs thread init ucontext malloc virtio
+DIRS=libc lwp stubs thread init ucontext malloc
 RUMPOBJ?=../rumpobj
 RUMP?=$(RUMPOBJ)/rump
 LIBDIR=$(RUMP)/lib
