--- a/rumpkernel/linux/Makefile
+++ b/rumpkernel/linux/Makefile
@@ -10,13 +10,9 @@ CFLAGS+=-g -I${INCDIR}
 
 DEPS= #$(LIBDIR)/libc.a
 
-OBJ=$(OBJDIR)/netconfig.o
+OBJ=
 
 default:		$(OBJ)
-
-$(OBJDIR)/netconfig.o:		netconfig.c $(DEPS)
-				@mkdir -p $(OBJDIR)
-				${CC} ${CFLAGS} ${LDFLAGS} -c -o $@ netconfig.c
 
 .PHONY:				clean
 clean:		
