lkl: fix if statement
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -30,6 +30,6 @@ test:
   override:
     - |
          if [ "$OS" == "linux" ]; then
-           make -C tests run:
-             parallel: true
-         fi
+           make -C tests run
+         fi:
+           parallel: true
