--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
     - sudo apt-get update -y
     - sudo apt-get install qemu-kvm libxen-dev -y
     - sudo apt-get install g++-4.8 bc libfuse-dev libarchive-dev -y
-    - sudo apt-get install -y gcc-arm-none-eabi qemu-system-arm
+    - sudo apt-get install -y gcc-arm-none-eabi qemu-system-arm libcap2-bin
   post:
     # clear cache
     # - rm -r ~/.gradle
