lkl: enable ccache
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -7,12 +7,15 @@ machine:
 
 ## Customize dependencies
 dependencies:
+  cache_directories:
+    - ~/.ccache/
+
   pre:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo add-apt-repository ppa:linaro-maintainers/tools -y
     - sudo add-apt-repository ppa:terry.guo/gcc-arm-embedded -y
     - sudo apt-get update -y
-    - sudo apt-get install qemu-kvm libxen-dev -y
+    - sudo apt-get install qemu-kvm libxen-dev ccache -y
     - sudo apt-get install g++-4.8 bc libfuse-dev libarchive-dev -y
     - sudo apt-get install -y gcc-arm-none-eabi qemu-system-arm libcap2-bin
   post:
