add linux/lseek as a platform call
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/platform/linux/Makefile
+++ b/platform/linux/Makefile
@@ -18,6 +18,7 @@ OBJ+=$(OBJDIR)/fsync.o
 OBJ+=$(OBJDIR)/getpagesize.o
 OBJ+=$(OBJDIR)/getrandom.o
 OBJ+=$(OBJDIR)/kill.o
+OBJ+=$(OBJDIR)/lseek.o
 OBJ+=$(OBJDIR)/mmap.o
 OBJ+=$(OBJDIR)/mprotect.o
 OBJ+=$(OBJDIR)/munmap.o
@@ -111,6 +112,10 @@ $(OBJDIR)/kill.o:		kill.c $(HEADERS)
 $(OBJDIR)/__libc_start_main.o:	__libc_start_main.c $(HEADERS)
 				@mkdir -p $(OBJDIR)
 				$(COMPILE.c) -o $@ __libc_start_main.c
+
+$(OBJDIR)/lseek.o:		lseek.c $(HEADERS)
+				@mkdir -p $(OBJDIR)
+				$(COMPILE.c) -o $@ lseek.c
 
 $(OBJDIR)/mmap.o:		mmap.c $(HEADERS)
 				@mkdir -p $(OBJDIR)
