--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ dependencies:
     - sudo apt-get install g++-4.8 bc libfuse-dev libarchive-dev -y
     - sudo apt-get install -y gcc-arm-none-eabi qemu-system-arm libcap2-bin
   post:
-    - ./build.sh -k ${RUMP} ${OS} notest:
+    - ./build.sh -q -k ${RUMP} ${OS} notest:
         parallel: true
     # clear cache
     # - rm -r ~/.gradle
