--- a/circle.yml
+++ b/circle.yml
@@ -35,4 +35,5 @@ test:
     - |
          if [ "$OS" == "linux" ]; then
            make -C tests run
-         fi
+         fi:
+         parallel: true
