parallel build again
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -32,8 +32,5 @@ checkout:
 test:
   pre:
   override:
-    - |
-         if [ "$OS" == "linux" ]; then
-           make -C tests run
-         fi:
+    - if [ "$OS" == "linux" ]; then make -C tests run ; fi:
          parallel: true
