lkl: support first shared libc.so build
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -29,14 +29,17 @@ endif
 $(OBJDIR)/ctor:		ctor.c $(DEPS)
 			@mkdir -p $(OBJDIR)
 			${CC} ${CFLAGS} ${LDFLAGS} -o $@ ctor.c
+			${CC} ${CFLAGS} -Wl,-rpath=$(LIBDIR)/ -o $@-dl ctor.c
 
 $(OBJDIR)/hello:	hello.c $(DEPS)
 			@mkdir -p $(OBJDIR)
 			${CC} ${CFLAGS} ${LDFLAGS} -o $@ hello.c
+			${CC} ${CFLAGS} -Wl,-rpath=$(LIBDIR)/ -o $@-dl hello.c
 
 $(OBJDIR)/cat:		cat.c $(DEPS)
 			@mkdir -p $(OBJDIR)
 			${CC} ${CFLAGS} ${LDFLAGS} -o $@ cat.c
+			${CC} ${CFLAGS} -Wl,-rpath=$(LIBDIR)/ -o $@-dl cat.c
 
 .PHONY:			test clean
 clean:		
