enable qemu-arm test
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -34,3 +34,5 @@ test:
   override:
     - if [ "$OS" == "linux" ]; then make -C tests run ; fi:
          parallel: true
+    - if [ "$OS" == "qemu-arm" ]; then make -C tests run-simple ; fi:
+         parallel: true
