--- a/tests/Makefile
+++ b/tests/Makefile
@@ -14,6 +14,11 @@ OBJ=$(OBJDIR)/hello $(OBJDIR)/ctor $(OBJDIR)/cat
 
 default:		$(OBJ)
 
+run-simple:		$(OBJ)
+			RUMP_VERBOSE=1 ${REXEC} $(OBJDIR)/hello
+			${REXEC} $(OBJDIR)/ctor
+			echo frankenlibc | ${REXEC} $(OBJDIR)/cat
+
 run:			$(OBJ)
 			dd if=/dev/zero of=disk.img bs=1024 count=20480
 			mkfs.ext4 -F disk.img
