--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,30 @@
-language: c
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+      before_install:
+        - travis_wait 30 git submodule update --init
+    - os: osx
+      osx_image: xcode9.3beta
+      before_install:
+        - travis_wait 30 git submodule update --init
+        - mkdir -p ~/.local/bin
+        - mkdir ~/junit
+        - export PATH=/usr/local/opt/ccache/libexec:$HOME/.local/bin:$PATH
+        - brew install gnu-sed coreutils ccache e2fsprogs
+        - pip install --user yamlish junit_xml
+        - ln -sf /usr/local/bin/gsed ~/.local/bin/sed
+        - ln -sf /usr/local/bin/gdate ~/.local/bin/date
+        - ln -sf /usr/local/opt/e2fsprogs/sbin/mkfs.ext4 ~/.local/bin/
+        - cp linux/tools/lkl/bin/x86_64-apple-darwin17.4.0-objcopy ~/.local/bin/objcopy
 
-compiler:
-  - gcc
-  - clang
+language: c
+cache: ccache
+git:
+  submodules: false
+
 
 script:
-  - ./build.sh
+  - travis_wait 30 ./build.sh -q -k linux notest
+  - RUMPDIR=`pwd`/rump RUMPOBJ=`pwd`/rumpobj make -C tests run
