lkl: 9pfs support with lib9p
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/platform/darwin/Makefile
+++ b/platform/darwin/Makefile
@@ -21,7 +21,8 @@ OBJ+=$(OBJDIR)/read.o $(OBJDIR)/readv.o
 OBJ+=$(OBJDIR)/write.o $(OBJDIR)/writev.o
 OBJ+=$(OBJDIR)/_start1.o $(OBJDIR)/_exit.o
 OBJ+=$(OBJDIR)/sysctl.o
-OBJ+=$(OBJDIR)/sigprocmask.o $(OBJDIR)/mach_absolute_time.o
+OBJ+=$(OBJDIR)/sigaction.o $(OBJDIR)/sigprocmask.o
+OBJ+=$(OBJDIR)/mach_absolute_time.o
 HEADERS=syscall.h i386/syscall.h x86_64/syscall.h darwin.h
 INCLUDES=-I../include -I../../franken/include -I../../franken/init -I../../franken/ucontext -I../../librumpuser -I../../franken/thread -I../../franken/ucontext/include
 CPPFLAGS+=-nostdinc $(INCLUDES)
@@ -125,6 +126,9 @@ $(OBJDIR)/_start1.o:		_start1.c $(HEADERS)
 
 $(OBJDIR)/sysctl.o:		sysctl.c $(HEADERS)
 				$(COMPILE.c) -o $@ sysctl.c
+
+$(OBJDIR)/sigaction.o:		sigaction.c $(HEADERS)
+				$(COMPILE.c) -o $@ sigaction.c
 
 $(OBJDIR)/sigprocmask.o:	sigprocmask.c $(HEADERS)
 				$(COMPILE.c) -o $@ sigprocmask.c
