lkl: temporary commit for mach-o binary support
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/franken/init/Makefile
+++ b/franken/init/Makefile
@@ -4,6 +4,7 @@ RUMPOBJ?=../../rumpobj
 OBJDIR=$(RUMPOBJ)/franken
 OBJ=$(OBJDIR)/fdinit.o
 OBJ+=$(OBJDIR)/start_main.o
+OBJ+=$(OBJDIR)/darwin_cdtors.o
 RUMP?=$(RUMPOBJ)/rump
 INCLUDES=-I../include -I../../platform/include -I. -I$(RUMP)/include -I$(RUMP)/usr/include
 CPPFLAGS+=-nostdinc $(INCLUDES)
@@ -19,6 +20,10 @@ $(OBJDIR)/fdinit.o:		fdinit.c $(DEPS)
 $(OBJDIR)/start_main.o:		start_main.c $(DEPS)
 				@mkdir -p $(OBJDIR)
 				$(COMPILE.c) -o $@ start_main.c
+
+$(OBJDIR)/darwin_cdtors.o:	darwin_cdtors.c
+				@mkdir -p $(OBJDIR)
+				$(CC) -g -c -o $@ $^
 
 .PHONY:				clean
 clean:		
