lkl: deploy binaries to bintray
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,41 @@
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-      before_install:
-        - travis_wait 30 git submodule update --init
-    - os: osx
-      osx_image: xcode9.3beta
-      before_install:
-        - travis_wait 30 git submodule update --init
-        - mkdir -p ~/.local/bin
-        - mkdir ~/junit
-        - export PATH=/usr/local/opt/ccache/libexec:$HOME/.local/bin:$PATH
-        - brew install gnu-sed ccache e2fsprogs
-        - pip install --user yamlish junit_xml
-        - ln -sf /usr/local/bin/gsed ~/.local/bin/sed
-        - ln -sf /usr/local/bin/gdate ~/.local/bin/date
-        - ln -sf /usr/local/opt/e2fsprogs/sbin/mkfs.ext4 ~/.local/bin/
-        - cp linux/tools/lkl/bin/x86_64-apple-darwin17.4.0-objcopy ~/.local/bin/objcopy
-
 language: c
 cache: ccache
 git:
   submodules: false
 
 
+stages:
+  - test
+  - downstream
+
+jobs:
+  include:
+    - stage: test
+      os: linux
+      dist: trusty
+      sudo: required
+      before_install:
+        - travis_wait 30 git submodule update --init --depth=50
+    - stage: test
+      os: osx
+      #osx_image: xcode9.3beta
+      before_install:
+        - travis_wait 30 git submodule update --init --depth=50
+        - mkdir -p ~/.local/bin
+        - mkdir ~/junit
+        - export PATH=/usr/local/opt/ccache/libexec:$HOME/.local/bin:$PATH
+        - HOMEBREW_NO_AUTO_UPDATE=1 brew install gnu-sed ccache e2fsprogs
+        - pip install --user yamlish junit_xml
+        - ln -sf /usr/local/bin/gsed ~/.local/bin/sed
+        - ln -sf /usr/local/bin/gdate ~/.local/bin/date
+        - ln -sf /usr/local/opt/e2fsprogs/sbin/mkfs.ext4 ~/.local/bin/
+        - cp linux/tools/lkl/bin/x86_64-apple-darwin17.4.0-objcopy ~/.local/bin/objcopy
+    - stage: downstream
+      script: bash -ex ./.travis-trigger.sh ukontainer/rumprun-packages lkl-musl
+      os: linux
+
 script:
-  - travis_wait 30 ./build.sh -q -k linux notest
-  - RUMPDIR=`pwd`/rump RUMPOBJ=`pwd`/rumpobj make -C tests run
+  - sudo mkdir -p /opt/rump && sudo chown -R $USER /opt/
+  - ./build.sh -d /opt/rump -q -k linux notest
+  - RUMPDIR=/opt/rump RUMPOBJ=`pwd`/rumpobj make -C tests run
+  - bash -ex ./.travis-deploy.sh
