lkl: ldso support of linux platform
TODO: no tls support with ldso

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/franken/stubs/Makefile
+++ b/franken/stubs/Makefile
@@ -3,24 +3,24 @@ COMPILE.S?=$(CC) -c $(CPPFLAGS) $(ASFLAGS)
 RUMPOBJ?=../../rumpobj
 OBJDIR=$(RUMPOBJ)/franken
 OBJ=$(OBJDIR)/stub___cerror.o $(OBJDIR)/stub___errno.o
-OBJ+=$(OBJDIR)/stub_execve.o $(OBJDIR)/stub__Exit.o
+#OBJ+=$(OBJDIR)/stub_execve.o $(OBJDIR)/stub__Exit.o
 OBJ+=$(OBJDIR)/stub___fork.o $(OBJDIR)/stub__getcontext.o
-OBJ+=$(OBJDIR)/stub_getpriority.o $(OBJDIR)/stub___getrusage50.o
-OBJ+=$(OBJDIR)/stub_kill.o $(OBJDIR)/stub___lfs_segwait50.o
+#OBJ+=$(OBJDIR)/stub_getpriority.o $(OBJDIR)/stub___getrusage50.o
+#OBJ+=$(OBJDIR)/stub_kill.o $(OBJDIR)/stub___lfs_segwait50.o
 OBJ+=$(OBJDIR)/stub_madvise.o $(OBJDIR)/stub___minbrk.o
 OBJ+=$(OBJDIR)/stub_minherit.o
-OBJ+=$(OBJDIR)/stub_mlock.o $(OBJDIR)/stub_mlockall.o
+#OBJ+=$(OBJDIR)/stub_mlock.o $(OBJDIR)/stub_mlockall.o
 OBJ+=$(OBJDIR)/stub_mmap.o $(OBJDIR)/stub__mmap.o
 OBJ+=$(OBJDIR)/stub_munmap.o $(OBJDIR)/stub__munmap.o
 OBJ+=$(OBJDIR)/stub___msgctl50.o $(OBJDIR)/stub___msync13.o
 OBJ+=$(OBJDIR)/stub___mq_timedreceive50.o $(OBJDIR)/stub___mq_timedsend50.o
-OBJ+=$(OBJDIR)/stub_munlock.o $(OBJDIR)/stub_munlockall.o
-OBJ+=$(OBJDIR)/stub___ntp_gettime50.o $(OBJDIR)/stub_posix_spawn.o
+#OBJ+=$(OBJDIR)/stub_munlock.o $(OBJDIR)/stub_munlockall.o
+OBJ+=$(OBJDIR)/stub___ntp_gettime50.o #$(OBJDIR)/stub_posix_spawn.o
 OBJ+=$(OBJDIR)/stub_profil.o $(OBJDIR)/stub_rasctl.o $(OBJDIR)/stub__sbrk.o
 OBJ+=$(OBJDIR)/stub__sched_getaffinity.o $(OBJDIR)/stub__sched_getparam.o
 OBJ+=$(OBJDIR)/stub__sched_setaffinity.o $(OBJDIR)/stub__sched_setparam.o
 OBJ+=$(OBJDIR)/stub___shmctl50.o $(OBJDIR)/stub_____semctl50.o
-OBJ+=$(OBJDIR)/stub_setcontext.o $(OBJDIR)/stub_setpriority.o
+OBJ+=$(OBJDIR)/stub_setcontext.o #$(OBJDIR)/stub_setpriority.o
 OBJ+=$(OBJDIR)/stub___sigaction14.o
 OBJ+=$(OBJDIR)/stub___sigaltstack14.o $(OBJDIR)/stub___sigaction_sigtramp.o
 OBJ+=$(OBJDIR)/stub___sigprocmask14.o $(OBJDIR)/stub_sigqueueinfo.o
