--- a/platform/linux/Makefile
+++ b/platform/linux/Makefile
@@ -11,6 +11,7 @@ OBJ+=$(CRTDIR)/crtend.o
 OBJ+=$(OBJDIR)/clock_getres.o
 OBJ+=$(OBJDIR)/clock_gettime.o
 OBJ+=$(OBJDIR)/clock_nanosleep.o
+OBJ+=$(OBJDIR)/dlstart.o $(OBJDIR)/dynlink.o
 OBJ+=$(OBJDIR)/_exit.o
 OBJ+=$(OBJDIR)/fcntl.o
 OBJ+=$(OBJDIR)/fstat.o
@@ -80,6 +81,14 @@ $(OBJDIR)/clock_gettime.o:	clock_gettime.c $(HEADERS)
 $(OBJDIR)/clock_nanosleep.o:	clock_nanosleep.c $(HEADERS)
 				@mkdir -p $(OBJDIR)
 				$(COMPILE.c) -o $@ clock_nanosleep.c
+
+$(OBJDIR)/dlstart.o:		dlstart.c $(HEADERS)
+				@mkdir -p $(OBJDIR)
+				$(COMPILE.c) -o $@ dlstart.c
+
+$(OBJDIR)/dynlink.o:		dynlink.c $(HEADERS)
+				@mkdir -p $(OBJDIR)
+				$(COMPILE.c) -o $@ dynlink.c
 
 $(OBJDIR)/_exit.o:		_exit.c $(HEADERS)
 				@mkdir -p $(OBJDIR)
