cxx: import LLVM source tree with version llvmorg-8.0.0
Signed-off-by: Akira Moroo <retrage01@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "musl"]
 	path = musl
 	url = git://github.com/ukontainer/musl.git
+[submodule "llvm"]
+	path = llvm
+	url = git://github.com/llvm/llvm-project.git
