lkl: fix bypassed mmap issue by not using stub mmap/munmap
This means you cannot configure PROT_READ etc by application's mmap.

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/franken/stubs/Makefile
+++ b/franken/stubs/Makefile
@@ -10,8 +10,8 @@ OBJ+=$(OBJDIR)/stub___fork.o $(OBJDIR)/stub__getcontext.o
 OBJ+=$(OBJDIR)/stub_madvise.o $(OBJDIR)/stub___minbrk.o
 OBJ+=$(OBJDIR)/stub_minherit.o
 #OBJ+=$(OBJDIR)/stub_mlock.o $(OBJDIR)/stub_mlockall.o
-OBJ+=$(OBJDIR)/stub_mmap.o $(OBJDIR)/stub__mmap.o
-OBJ+=$(OBJDIR)/stub_munmap.o $(OBJDIR)/stub__munmap.o
+#OBJ+=$(OBJDIR)/stub_mmap.o $(OBJDIR)/stub__mmap.o
+#OBJ+=$(OBJDIR)/stub_munmap.o $(OBJDIR)/stub__munmap.o
 OBJ+=$(OBJDIR)/stub___msgctl50.o $(OBJDIR)/stub___msync13.o
 OBJ+=$(OBJDIR)/stub___mq_timedreceive50.o $(OBJDIR)/stub___mq_timedsend50.o
 #OBJ+=$(OBJDIR)/stub_munlock.o $(OBJDIR)/stub_munlockall.o
